Add user group update options to api
